feat: add complexity to getAllLogs